--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,36 +1,25 @@
-<link rel="stylesheet" href="./css/login.css">
-<div class="wrapper">
-    <form class="login-form">
-        <div class="padding-md">
-            <label for="email-login">email:</label>
-            <input type="text" id="email-login" />
-        </div>
-        <div class="padding-md">
-            <label for="password-login">password:</label>
-            <input type="password" id="password-login" />
-        </div>
-        <div class="padding-md">
-            <button type="submit" id="login-btn">login</button>
-        </div>
-    </form>
+<main class="container mt-5">
+  <h1 class="mb-4">Login</h1>
+  <form class="chess-login-form">
+    <div class="mb-3">
+      <label for="username" class="form-label">Username</label>
+      <input
+        type="text"
+        class="form-control"
+        id="username-chess-login"
+        placeholder="Username"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="password" class="form-label">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password-chess-login"
+        placeholder="Password"
+      />
+    </div>
+    <button type="submit" class="btn btn-primary">Log In</button>
+  </form>
 
-    <form class="signup-form">
-        <div>
-            <label for="username-signup">username:</label>
-            <input id="username-signup" type="text">
-        </div>
-        <div>
-            <label for="email-signup">email:</label>
-            <input type="text" id="email-signup" />
-        </div>
-        <div>
-            <label for="password-signup">password:</label>
-            <input type="password" id="password-signup" />
-        </div>
-        <div>
-            <button type="submit" id="signup-btn">signup</button>
-        </div>
-    </form>
-</div>
-{{!-- Load the login script --}}
-<script src="/js/login.js"></script>
+</main>
